updated pins, survey, and place detail

--- a/.dotcloud/config
+++ b/.dotcloud/config
@@ -1,6 +1,6 @@
 {
     "push_branch": null, 
-    "application": "drcog", 
-    "version": "0.9.7", 
+    "application": "walkscope", 
+    "version": "0.9.5", 
     "push_protocol": "rsync"
 }
