--- a/src/flavors/walkdenver/config.yml
+++ b/src/flavors/walkdenver/config.yml
@@ -404,14 +404,16 @@ place:
           value: ''
         - label: _(No sidewalk)
           value: No Sidewalk
-        - label: _(Less than 2 feet attached)
-          value: Less than 2 feet attached
         - label: _(Less than 5 feet attached)
           value: Less than 5 feet attached
+        - label: _(Less than 5 feet detached)
+          value: Less than 5 feet detached
         - label: _(5 ft or more attached)
           value: 5 ft or more attached
         - label: _(5 ft or more detached)
           value: 5 ft or more detached
+        - label: _(Other)
+          value: Other          
       name: Sidewalk Type
       attrs:   
         - key: class
@@ -479,7 +481,7 @@ place:
         - key: class
           value: street-input
 # Common Fields   
-    - prompt: _(How would you rate the pedestrian environment overall? 1-10, 10=highest)
+    - prompt: _(How would you rate the pedestrian environment overall? 1-5, 5=highest)
       type: select
       name: Overall Score
       options:
@@ -495,16 +497,6 @@ place:
           value: 4
         - label: _(5)
           value: 5 
-        - label: _(6)
-          value: 6
-        - label: _(7)
-          value: 7
-        - label: _(8)
-          value: 8
-        - label: _(9)
-          value: 9
-        - label: _(10)
-          value: 10  
       attrs:
         - key: class
           value: opt-input      
