--- a/src/flavors/walkdenver/config.yml
+++ b/src/flavors/walkdenver/config.yml
@@ -18,11 +18,12 @@ map:
   geolocation_onload: false
   options:
     center:
-      lat: 39.7474
-      lng: -104.9777
+      lat: 39.737567
+      lng: -104.984718
     zoom: 14
     minZoom: 10
     maxZoom: 17
+    maxBounds: [ [39.618913,-105.086975], [39.797986, -104.792404] ]
   layers:
     - url: http://{s}.tiles.mapbox.com/v3/openplans.map-dmar86ym/{z}/{x}/{y}.png
       attribution: '&copy; OpenStreetMap contributors, CC-BY-SA. <a href="http://mapbox.com/about/maps" target="_blank">Terms &amp; Feedback</a>'
